# mcsema

./: CMakeLists.txt  README.md
examples/Maze/scripts/: build_klee.sh
mcsema/Arch/: ABI.cpp  ABI_original.cpp
mcsema/Arch/MIPSEL/Runtime/: CMakeLists.txt  Registers.h  Runtime.cpp  print_ELF_64_linux.cpp  print_elf_mips_floatsupport.cpp
mcsema/Arch/X86/Runtime/: print_ELF_64_linux.cpp
mcsema/BC/: Callback.cpp  Function.cpp  Instruction.cpp  Instruction.h  Lift.cpp  Lift.h  Optimize.cpp  Segment.cpp  Util.cpp
mcsema/CFG/: CFG.cpp  CFG.h  CFG.proto
scripts/: ida.cfg  vis_cfg_2.py
tests/sample_c_programs/: README.md
tests/sample_c_programs/testsuite1/cat1/: assign_op.c  bitwise_op.c  break.c  const_data.c  continue.c  do_while.c  enum.c  even-odd.c  for_loop.c  global_local_var.c  goto.c  hello.c  inc_dec_op.c  inline_func.c  int_data_types.c  macro.c  multiline_macro.c  multiple_assign.c  nor.c  pointers.c  ptr_basic.c  relational_ops.c  shift_operator.c  size.c  storage_classes.c  struct.c  struct_pack.c  switch.c  ternary_op.c  time.c  type_conv.c  variadic.c  void_ptr.c  volatile.c
tests/sample_c_programs/testsuite1/cat2/: add_recursive.c  anon_struct.c  anon_union.c  array_func_args.c  array_of_ptrs.c  array_via_ptr.c  bitfield.c  checksum.c  cmd_line_args.c  compare.c  dynamic_array.c  dynamic_struct.c  dynamic_union.c  endianness.c  file_write.c  float_pointer.c  func_calling.c  func_pointer.c  matrix_mul.c  mem_mgmt.c  multiple_indirection.c  nested_if.c  nested_struct.c  nested_switch.c  nested_while.c  null_ptr.c  pointer_arith.c  pointer_struct.c  prepro_directives.c  ptr_cmp.c  string_ops.c  strtok.c  struct_meme.c  token_pasting.c  union_structure.c
tests/sample_c_programs/testsuite1/cat3/: adjacent_graph.c  backtraking.c  bfs.c  binary_insertion_sort.c  binary_search.c  bubble_sort.c  circular_queue.c  counting_sort.c  dfs.c  dijkstra.c  div_and_conquer.c  heap_sort.c  huffman.c  insertion_sort.c  iter_quick_sort.c  job_sequencing.c  kmp.c  level_order.c  linear_search.c  link_list.c  merge_sort.c  min_spanning_tree.c  permutation_comb.c  priority_sched.c  queue.c  quick_sort.c  radix_sort.c  round_robin.c  rsa.c  search_key_tree.c  selection_sort.c  shell_sort.c  shortest_job_first.c  stack_array.c  strassen_matrix_mul.c  swap_link_list.c  (+2 more)
tests/sample_c_programs/testsuite2/: ArrayIndex.c  StringLiteral.c  abort-error.c  array-bound.c  assert.c  constant-string.c  constants.c  dangling-ptr.c  div-zero.c  div.c  file-handling.c  fread.c  getpgid.c  invalid-stack-deref.c  local-var.c  modulo-error.c  null-ptr.c  null.c  pointer-arith.c  read-only.c  read-user.c  scanf.c  uninitialised-ptr.c  vararg-bad.c  vul.c
tools/mcsema_disass/: __main__.py
tools/mcsema_disass/ida7/: CFG_pb2.py  arm_util.py  collect_variable.py  disass.py  exception.py  flow.py  get_cfg.py  life.py  mips_util.py  refs.py  segment.py  table.py  util.py  x86_util.py
tools/mcsema_lift/: Lift.cpp
(+24 files in other folders)
